<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tl_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/login_title"
        app:titleTextColor="@color/text_white"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="42dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_name"
            style="@style/style_txt_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_login_name"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/login_name_hint"/>
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        style="@style/style_line_divider"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_password"
            style="@style/style_txt_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_login_password"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:digits="@string/register_password_digits"
            android:hint="@string/login_password_hint"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_login"
        style="@style/style_txt_normal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/slt_login_click"
        android:textColor="@color/text_white"
        android:text="@string/login_title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_login_register"
        style="@style/style_txt_normal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height_normal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/slt_login_register"
        android:text="@string/login_register"/>
</LinearLayout>